pascalParser.py
# Generated from pascal.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class pascalParser ( Parser ):

    grammarFileName = "pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "'integer'", "'int64'", 
                     "'begin'", "'end'", "'writeln'", "'readln'", "'if'", 
                     "'then'", "'else'", "'while'", "'do'", "';'", "':'", 
                     "','", "'.'", "'('", "')'", "':='", "'='", "'<>'", 
                     "'<'", "'<='", "'>='", "'>'", "'or'", "'and'", "'+'", 
                     "'-'", "'*'", "'/'", "'//'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SEMI", "COLON", "COMMA", 
                      "DOT", "LPAREN", "RPAREN", "ASSIGN", "EQUAL", "NOT_EQUAL", 
                      "LT", "LE", "GE", "GT", "OR", "AND", "PLUS", "MINUS", 
                      "STAR", "SLASH", "DIV", "MOD", "ID", "CONST_INT", 
                      "CONST_STR", "WS", "COMMENT1", "COMMENT2" ]

    RULE_program = 0
    RULE_infoPart = 1
    RULE_variableDeclarationPart = 2
    RULE_variableDeclaration = 3
    RULE_identifierList = 4
    RULE_varType = 5
    RULE_block = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_writelnReadln = 9
    RULE_readln = 10
    RULE_writeln = 11
    RULE_assignmentStatement = 12
    RULE_expressions = 13
    RULE_expression = 14
    RULE_operators = 15
    RULE_ifStatement = 16
    RULE_elseStatement = 17
    RULE_whileStatement = 18
    RULE_blockBody = 19

    ruleNames =  [ "program", "infoPart", "variableDeclarationPart", "variableDeclaration", 
                   "identifierList", "varType", "block", "statements", "statement", 
                   "writelnReadln", "readln", "writeln", "assignmentStatement", 
                   "expressions", "expression", "operators", "ifStatement", 
                   "elseStatement", "whileStatement", "blockBody" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    SEMI=14
    COLON=15
    COMMA=16
    DOT=17
    LPAREN=18
    RPAREN=19
    ASSIGN=20
    EQUAL=21
    NOT_EQUAL=22
    LT=23
    LE=24
    GE=25
    GT=26
    OR=27
    AND=28
    PLUS=29
    MINUS=30
    STAR=31
    SLASH=32
    DIV=33
    MOD=34
    ID=35
    CONST_INT=36
    CONST_STR=37
    WS=38
    COMMENT1=39
    COMMENT2=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def infoPart(self):
            return self.getTypedRuleContext(pascalParser.InfoPartContext,0)


        def variableDeclarationPart(self):
            return self.getTypedRuleContext(pascalParser.VariableDeclarationPartContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = pascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pascalParser.T__0:
                self.state = 40
                self.infoPart()


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pascalParser.T__1:
                self.state = 43
                self.variableDeclarationPart()


            self.state = 46
            self.block()
            self.state = 47
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InfoPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_infoPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfoPart" ):
                listener.enterInfoPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfoPart" ):
                listener.exitInfoPart(self)




    def infoPart(self):

        localctx = pascalParser.InfoPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_infoPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(pascalParser.T__0)
            self.state = 51 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 50
                    self.matchWildcard()

                else:
                    raise NoViableAltException(self)
                self.state = 53 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 55
            self.match(pascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(pascalParser.VariableDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.SEMI)
            else:
                return self.getToken(pascalParser.SEMI, i)

        def getRuleIndex(self):
            return pascalParser.RULE_variableDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationPart" ):
                listener.enterVariableDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationPart" ):
                listener.exitVariableDeclarationPart(self)




    def variableDeclarationPart(self):

        localctx = pascalParser.VariableDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclarationPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(pascalParser.T__1)
            self.state = 58
            self.variableDeclaration()
            self.state = 63
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self.match(pascalParser.SEMI)
                    self.state = 60
                    self.variableDeclaration() 
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 66
            self.match(pascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(pascalParser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(pascalParser.VarTypeContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = pascalParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.identifierList()
            self.state = 69
            self.match(pascalParser.COLON)
            self.state = 70
            self.varType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.ID)
            else:
                return self.getToken(pascalParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.COMMA)
            else:
                return self.getToken(pascalParser.COMMA, i)

        def getRuleIndex(self):
            return pascalParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)




    def identifierList(self):

        localctx = pascalParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(pascalParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pascalParser.COMMA:
                self.state = 73
                self.match(pascalParser.COMMA)
                self.state = 74
                self.match(pascalParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pascalParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)




    def varType(self):

        localctx = pascalParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not(_la==pascalParser.T__2 or _la==pascalParser.T__3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(pascalParser.StatementsContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = pascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(pascalParser.T__4)
            self.state = 83
            self.statements()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pascalParser.SEMI:
                self.state = 84
                self.match(pascalParser.SEMI)


            self.state = 87
            self.match(pascalParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.StatementContext)
            else:
                return self.getTypedRuleContext(pascalParser.StatementContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.SEMI)
            else:
                return self.getToken(pascalParser.SEMI, i)

        def getRuleIndex(self):
            return pascalParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = pascalParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.statement()
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 90
                    self.match(pascalParser.SEMI)
                    self.state = 91
                    self.statement() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def writelnReadln(self):
            return self.getTypedRuleContext(pascalParser.WritelnReadlnContext,0)


        def readln(self):
            return self.getTypedRuleContext(pascalParser.ReadlnContext,0)


        def writeln(self):
            return self.getTypedRuleContext(pascalParser.WritelnContext,0)


        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(pascalParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(pascalParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(pascalParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = pascalParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.writelnReadln()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.readln()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.writeln()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.assignmentStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 102
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 103
                self.whileStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WritelnReadlnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.LPAREN)
            else:
                return self.getToken(pascalParser.LPAREN, i)

        def CONST_STR(self):
            return self.getToken(pascalParser.CONST_STR, 0)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.RPAREN)
            else:
                return self.getToken(pascalParser.RPAREN, i)

        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def ID(self):
            return self.getToken(pascalParser.ID, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_writelnReadln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWritelnReadln" ):
                listener.enterWritelnReadln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWritelnReadln" ):
                listener.exitWritelnReadln(self)




    def writelnReadln(self):

        localctx = pascalParser.WritelnReadlnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_writelnReadln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(pascalParser.T__6)
            self.state = 107
            self.match(pascalParser.LPAREN)
            self.state = 108
            self.match(pascalParser.CONST_STR)
            self.state = 109
            self.match(pascalParser.RPAREN)
            self.state = 110
            self.match(pascalParser.SEMI)
            self.state = 111
            self.match(pascalParser.T__7)
            self.state = 112
            self.match(pascalParser.LPAREN)
            self.state = 113
            self.match(pascalParser.ID)
            self.state = 114
            self.match(pascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReadlnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_readln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadln" ):
                listener.enterReadln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadln" ):
                listener.exitReadln(self)




    def readln(self):

        localctx = pascalParser.ReadlnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_readln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(pascalParser.T__7)
            self.state = 117
            self.match(pascalParser.LPAREN)
            self.state = 118
            self.identifierList()
            self.state = 119
            self.match(pascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WritelnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def expressions(self):
            return self.getTypedRuleContext(pascalParser.ExpressionsContext,0)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_writeln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteln" ):
                listener.enterWriteln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteln" ):
                listener.exitWriteln(self)




    def writeln(self):

        localctx = pascalParser.WritelnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_writeln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(pascalParser.T__6)
            self.state = 122
            self.match(pascalParser.LPAREN)
            self.state = 123
            self.expressions()
            self.state = 124
            self.match(pascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pascalParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(pascalParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(pascalParser.ExpressionContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = pascalParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(pascalParser.ID)
            self.state = 127
            self.match(pascalParser.ASSIGN)
            self.state = 128
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pascalParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.COMMA)
            else:
                return self.getToken(pascalParser.COMMA, i)

        def getRuleIndex(self):
            return pascalParser.RULE_expressions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressions" ):
                listener.enterExpressions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressions" ):
                listener.exitExpressions(self)




    def expressions(self):

        localctx = pascalParser.ExpressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expressions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.expression()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pascalParser.COMMA:
                self.state = 131
                self.match(pascalParser.COMMA)
                self.state = 132
                self.expression()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pascalParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def CONST_INT(self):
            return self.getToken(pascalParser.CONST_INT, 0)

        def CONST_STR(self):
            return self.getToken(pascalParser.CONST_STR, 0)

        def ID(self):
            return self.getToken(pascalParser.ID, 0)

        def operators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.OperatorsContext)
            else:
                return self.getTypedRuleContext(pascalParser.OperatorsContext,i)


        def getRuleIndex(self):
            return pascalParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = pascalParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pascalParser.LPAREN]:
                self.state = 138
                self.match(pascalParser.LPAREN)
                self.state = 139
                self.expression()
                self.state = 140
                self.match(pascalParser.RPAREN)
                pass
            elif token in [pascalParser.CONST_INT]:
                self.state = 142
                self.match(pascalParser.CONST_INT)
                pass
            elif token in [pascalParser.CONST_STR]:
                self.state = 143
                self.match(pascalParser.CONST_STR)
                pass
            elif token in [pascalParser.ID]:
                self.state = 144
                self.match(pascalParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 147
                    self.operators()
                    self.state = 148
                    self.expression() 
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(pascalParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(pascalParser.NOT_EQUAL, 0)

        def LT(self):
            return self.getToken(pascalParser.LT, 0)

        def LE(self):
            return self.getToken(pascalParser.LE, 0)

        def GE(self):
            return self.getToken(pascalParser.GE, 0)

        def GT(self):
            return self.getToken(pascalParser.GT, 0)

        def OR(self):
            return self.getToken(pascalParser.OR, 0)

        def AND(self):
            return self.getToken(pascalParser.AND, 0)

        def DIV(self):
            return self.getToken(pascalParser.DIV, 0)

        def MOD(self):
            return self.getToken(pascalParser.MOD, 0)

        def PLUS(self):
            return self.getToken(pascalParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(pascalParser.MINUS, 0)

        def STAR(self):
            return self.getToken(pascalParser.STAR, 0)

        def SLASH(self):
            return self.getToken(pascalParser.SLASH, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_operators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperators" ):
                listener.enterOperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperators" ):
                listener.exitOperators(self)




    def operators(self):

        localctx = pascalParser.OperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_operators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pascalParser.EQUAL) | (1 << pascalParser.NOT_EQUAL) | (1 << pascalParser.LT) | (1 << pascalParser.LE) | (1 << pascalParser.GE) | (1 << pascalParser.GT) | (1 << pascalParser.OR) | (1 << pascalParser.AND) | (1 << pascalParser.PLUS) | (1 << pascalParser.MINUS) | (1 << pascalParser.STAR) | (1 << pascalParser.SLASH) | (1 << pascalParser.DIV) | (1 << pascalParser.MOD))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(pascalParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)

